# mextractor

./: .gitignore  README.md  pyproject.toml
mextractor/: base.py  cli.py  constants.py  extractors.py  image.py  utils.py  video.py  workflow.py
sandbox/: video_subdirs.py
tests/: __init__.py  conftest.py  test_image.py  test_video.py
