[tool.poetry]
name = "mextractor"
version = "1.0.0"
description = "mextractor can extract media metadata to YAML and read them"
readme = "README.md"
repository = "https://github.com/caniko/media-metadata-extractor"
homepage = "https://pypi.org/project/mextractor/"
authors = ["Can H. Tartanoglu <canhtart@gmail.com>"]
license = "Apache-2.0"
keywords = ["pydantic", "metadata", "video", "image", "bigdata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"

numpy = [
    {version = "^1.23.0", python = ">=3.8, <3.11"},
    {version = "^1.21.0", python = "~3.7"}
]

pydantic = "^1.9.2"
pydantic-yaml = "^0.8.0"

"ruamel.yaml" = "^0.17.21"
webp = "^0.1.4"

opencv-python = {version = "^4.6.0", optional = true}
ffmpeg-python = {version = "^0.2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.extras]
extract = ["opencv-python", "ffmpeg-python"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
